--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,1 +1,5 @@
+- include: deps.yml
 - include: postgresql.yml
+# - include: databases.yml
+# - include: users.yml
+# - include: user_privileges.yml
