--- a/tasks/deps.yml
+++ b/tasks/deps.yml
@@ -1,10 +1,8 @@
 - name: install ansible dependencies to manage postgresql
   apt:
-    pkg: '{{ item }}'
-    state: present
     update_cache: yes
     cache_valid_time: "{{ apt_cache_valid_time | default (3600) }}"
-  with_items:
-    - python-psycopg2
-    - python-pycurl
-    - locales
+    name:
+      - python-psycopg2
+      - python-pycurl
+      - locales
