Add shm_size setting to fix out of memory error

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,7 @@ postgresql_container_env:
   POSTGRES_PASSWORD: '{{ postgresql_admin_password }}'
 postgresql_container_log_driver: ''
 postgresql_container_log_opt: {}
+postgresql_container_shm_size: 64M
 postgresql_container_volumes:
   - '{{ postgresql_data_dir }}:/var/lib/postgresql/data'
   - '{{ postgresql_config_dir }}/postgresql.conf:{{ postgresql_container_config_dir }}/postgresql.conf'
